--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vinxi build"
   },
   "dependencies": {
+    "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.6",
+    "@types/semver": "^7.5.8",
+    "semver": "^7.6.3",
     "solid-js": "^1.8.18",
     "vinxi": "^0.4.1"
   },
