--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "example-basic",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
@@ -11,6 +12,7 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.11",
+    "semver": "^7.7.0",
     "solid-js": "^1.9.2",
     "vinxi": "^0.4.3"
   },
@@ -19,5 +21,8 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/semver": "^7.5.8"
   }
 }
