--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "version": "vinxi version"
   },
   "dependencies": {
+    "@solid-primitives/i18n": "^2.2.0",
+    "@solid-primitives/storage": "^4.3.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.11",
