--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.11",
+    "@supabase/supabase-js": "^2.48.1",
     "semver": "^7.7.0",
     "solid-js": "^1.9.2",
     "vinxi": "^0.4.3"
